syntax="proto3";
option java_multiple_files=true;
option java_package="sep3.rightovers.protobuf";
package rightovers.grpc;

service RightOversService
{
  rpc saveFoodPost(FoodPostRequest) returns (FoodPostCreatedResponse);
  rpc getAllFoodPosts(GetAllRequest) returns (stream GetAllResponse);
}

message FoodPostRequest
{
  string title = 1;
  string description =2;
  string daysLeftToEat=3;
  string creatorUserName=4;
  string category =5;
  string pictureUrl=6;

}

message FoodPostCreatedResponse
{
  bool created = 1;
  int32 idInDB = 2;
}

message GetAllRequest
{
  bool filler = 1;
}

message GetAllResponse
{
  string title = 1;
  string category = 2;
}